--- a/ConvertToDicom/mainwindow.ui
+++ b/ConvertToDicom/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>599</width>
-    <height>349</height>
+    <width>596</width>
+    <height>418</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Convert To DICOM</string>
@@ -91,7 +97,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QCheckBox" name="overWriteCheckBox">
+        <widget class="QCheckBox" name="overwriteFilesCheckBox">
          <property name="text">
           <string>Overwrite</string>
          </property>
@@ -143,6 +149,42 @@
       </layout>
      </widget>
     </item>
+    <item>
+     <widget class="QGroupBox" name="groupBox_4">
+      <property name="title">
+       <string/>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>367</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="convertPushButton">
+         <property name="text">
+          <string>Convert</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="closePushButton">
+         <property name="text">
+          <string>Close</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -150,7 +192,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>599</width>
+     <width>596</width>
      <height>22</height>
     </rect>
    </property>
@@ -158,11 +200,13 @@
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionHi"/>
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionHi_2"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -182,6 +226,16 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionHi">
+   <property name="text">
+    <string>Hi</string>
+   </property>
+  </action>
+  <action name="actionHi_2">
+   <property name="text">
+    <string>Hi</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
