--- a/ConvertToDicom/dicomattributesdialog.ui
+++ b/ConvertToDicom/dicomattributesdialog.ui
@@ -32,7 +32,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="patientTab">
       <attribute name="title">
@@ -56,7 +56,7 @@
                <string/>
               </property>
               <property name="text">
-               <string>&amp;Name</string>
+               <string>Name</string>
               </property>
               <property name="buddy">
                <cstring>patientNameLineEdit</cstring>
@@ -79,7 +79,7 @@
             <item row="1" column="0">
              <widget class="QLabel" name="label_2">
               <property name="text">
-               <string>&amp;ID</string>
+               <string>ID</string>
               </property>
               <property name="buddy">
                <cstring>patientIDLineEdit</cstring>
@@ -102,7 +102,7 @@
             <item row="2" column="0">
              <widget class="QLabel" name="label_3">
               <property name="text">
-               <string>&amp;DOB</string>
+               <string>DOB</string>
               </property>
               <property name="buddy">
                <cstring>patientDOBDateEdit</cstring>
@@ -119,7 +119,7 @@
             <item row="3" column="0">
              <widget class="QLabel" name="label_4">
               <property name="text">
-               <string>&amp;Sex</string>
+               <string>Sex</string>
               </property>
               <property name="buddy">
                <cstring>patientSexComboBox</cstring>
